minor changes to nav and menu to correct alignment, still to be fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,7 @@ h1 {
     font-size: 125%;
     letter-spacing: 2px;
     padding-top: 10px;  
-    text-align: right;  
+      
 }
 
 #menu > li {
@@ -123,7 +123,7 @@ footer {
   }
 
   /*media query for tablets and larger >768px*/
-  @media only screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) {
     /*header*/
     nav {
         display: block;
@@ -131,6 +131,7 @@ footer {
         box-shadow: none;
         width: fit-content;
         padding-right: 1 rem;
+    
     }
 
     #menu {
@@ -164,4 +165,6 @@ footer {
     #menu a:hover {
         border-bottom: 1px solid #8C8665;
     }
+
+
   }
